--- a/ecommerce/templates/core/index.html
+++ b/ecommerce/templates/core/index.html
@@ -52,6 +52,7 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+            <li><a class="nav-link scrollto active" href="{% url 'add_product' %}">Add Product</a></li>
             {% if user.is_authenticated %}
             <li><a class="nav-link scrollto active" href="#hero">Welcome {{user.username}}</a></li>
             <li><a class="getstarted scrollto" href="{% url 'user_logout' %}">Logout</a></li>
