--- a/ecommerce/static/core/css/index.css
+++ b/ecommerce/static/core/css/index.css
@@ -499,69 +499,11 @@ section {
   font-weight: 500;
 }
 
-/*--------------------------------------------------------------
-# Why Us
---------------------------------------------------------------*/
-.why-us .content {
-  padding: 30px;
-  background: #009970;
-  border-radius: 4px;
-  color: #fff;
-}
-.why-us .content h3 {
-  font-weight: 700;
-  font-size: 34px;
-  margin-bottom: 30px;
-}
-.why-us .content p {
-  margin-bottom: 30px;
-}
-.why-us .content .more-btn {
-  display: inline-block;
-  background: rgba(255, 255, 255, 0.1);
-  padding: 6px 30px 8px 30px;
-  color: #fff;
-  border-radius: 50px;
-  transition: all ease-in-out 0.4s;
-}
-.why-us .content .more-btn i {
-  font-size: 14px;
-}
-.why-us .content .more-btn:hover {
-  color: #009970;
-  background: #fff;
-}
-.why-us .icon-boxes .icon-box {
-  text-align: center;
-  border-radius: 10px;
-  background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  padding: 40px 30px;
-  width: 100%;
-  transition: 0.3s;
-}
-.why-us .icon-boxes .icon-box i {
-  font-size: 40px;
-  color: #009970;
-  margin-bottom: 30px;
-}
-.why-us .icon-boxes .icon-box h4 {
-  font-size: 20px;
-  font-weight: 700;
-  margin: 0 0 30px 0;
-}
-.why-us .icon-boxes .icon-box p {
-  font-size: 15px;
-  color: #848484;
-}
-.why-us .icon-boxes .icon-box:hover {
-  box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.15);
-}
 
 /*--------------------------------------------------------------
 # Cta
 --------------------------------------------------------------*/
-.cta {
+/* .cta {
   background: linear-gradient(rgba(2, 2, 2, 0.7), rgba(0, 0, 0, 0.7)), url("../img/cta-bg.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
@@ -596,7 +538,7 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
-.services .icon-box {
+/* .services .icon-box {
   text-align: center;
   padding: 40px 20px;
   transition: all ease-in-out 0.3s;
@@ -642,12 +584,12 @@ section {
 .services .icon-box:hover .icon {
   color: #fff;
   background: #009970;
-}
+} */
 
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
-.portfolio .portfolio-item {
+/* .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
 .portfolio #portfolio-flters {
@@ -754,7 +696,7 @@ section {
 /*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
-.portfolio-details {
+/* .portfolio-details { 
   padding-top: 40px;
 }
 .portfolio-details .portfolio-details-slider img {
@@ -803,12 +745,12 @@ section {
 }
 .portfolio-details .portfolio-description p {
   padding: 0;
-}
+} */
 
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
-.testimonials .testimonials-carousel, .testimonials .testimonials-slider {
+/* .testimonials .testimonials-carousel, .testimonials .testimonials-slider {
   overflow: hidden;
 }
 .testimonials .testimonial-item {
@@ -955,7 +897,7 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-.contact .info {
+/* .contact .info { 
   padding: 30px;
   width: 100%;
   background: #fff;
@@ -1070,12 +1012,12 @@ section {
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
-.breadcrumbs {
+/* .breadcrumbs {
   padding: 15px 0;
   background: #f6f6f7;
   margin-top: 100px;
@@ -1112,7 +1054,7 @@ section {
   .breadcrumbs ol li {
     display: inline-block;
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Footer
