--- a/ecommerce/templates/core/product_desc.html
+++ b/ecommerce/templates/core/product_desc.html
@@ -22,7 +22,8 @@
 					<div class="preview col-md-6">
 						
 						<div class="preview-pic tab-content">
-						  <div class="tab-pane active" id="pic-1"><img src="{{product.img.url}}" />
+						  <div class="tab-pane active" id="pic-1">
+							<img src="{{product.img.url}}" />
                             </div>
 						</div>
 					</div>
