--- a/ecommerce/static/acc/logstyl.css
+++ b/ecommerce/static/acc/logstyl.css
@@ -64,7 +64,7 @@ section .container .user .formBx {
   transition: 0.5s;
 }
 
-section .container .user .formBx form h2 {
+section .container .user .formBx h2 {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
@@ -75,7 +75,7 @@ section .container .user .formBx form h2 {
   color: #555;
 }
 
-section .container .user .formBx form input {
+section .container .user .formBx input {
   position: relative;
   width: 100%;
   padding: 10px;
@@ -90,8 +90,9 @@ section .container .user .formBx form input {
   font-weight: 300;
 }
 
-section .container .user .formBx form input[type='submit'] {
-  max-width: 100px;
+section .container .user .formBx input[type='submit'] {
+  max-width: 100%;
+  height: 40px;
   background: #677eff;
   color: #fff;
   cursor: pointer;
