--- a/ecommerce/templates/core/orderlist.html
+++ b/ecommerce/templates/core/orderlist.html
@@ -141,7 +141,7 @@
               </tr>
               <tr class="row100 body">
                 <td class="cell100 column1">
-                    <a href="#" class="btn btn-warning float-right ml-2">Checkout</a>
+                    <a href="{% url 'checkout_page' %}" class="btn btn-warning float-right ml-2">Checkout</a>
                     <a href="/" class="btn btn-primary float-right">Continue shopping</a>
                 </td>    
               </tr>
