--- a/ecommerce/static/core/css/ind.css
+++ b/ecommerce/static/core/css/ind.css
@@ -614,7 +614,7 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
-/* .portfolio .portfolio-item {
+.portfolio .portfolio-item {
   margin-bottom: 30px;
 }
 .portfolio #portfolio-flters {
@@ -721,7 +721,7 @@ section {
 /*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
-/* .portfolio-details { 
+.portfolio-details { 
   padding-top: 40px;
 }
 .portfolio-details .portfolio-details-slider img {
@@ -770,7 +770,7 @@ section {
 }
 .portfolio-details .portfolio-description p {
   padding: 0;
-} */
+} 
 
 /*--------------------------------------------------------------
 # Testimonials
